basic dashboar styling

--- a/server/ui/head.html
+++ b/server/ui/head.html
@@ -10,3 +10,11 @@
   <style type="text/css"></style>
 </head>
 <body>
+<nav id="dp-navbar">
+  <div>
+  	<div id="dp-navbar-h">
+  		<a id="dp-logo" href="/">Dockpit</a>	
+  	</div>   
+    <h1>{{.DBPath}}</h1>
+  </div>
+</nav>
