now possible to remove a dep from an isolation

--- a/server/ui/dashboard.html
+++ b/server/ui/dashboard.html
@@ -1,12 +1,8 @@
 {{ template "head" . }}
 
 <section id="dp-dashboard">
-	<div id="dp-dep-panel">
-		<div id="dep-section"></div>		
-	</div>
-	<div id="dp-iso-panel">
-		<div id="isolation-section"></div>		
-	</div>
+	<div id="dp-dep-panel"></div>
+	<div id="dp-iso-panel"></div>
 </section>
 
 <script>
