further styling of basic functionality

--- a/server/ui/dashboard.html
+++ b/server/ui/dashboard.html
@@ -1,13 +1,10 @@
 {{ template "head" . }}
 
-<section id="dp-dashboard">
-	<div id="dp-dep-panel"></div>
-	<div id="dp-iso-panel"></div>
-</section>
-
-<script>
-	
-
-</script>
+<div class="ui padded grid">
+    <div class="two column row">
+      <div class="column" id="dp-dep-panel"></div>
+      <div class="column" id="dp-iso-panel"></div>
+    </div>
+</div>
 
 {{ template "foot" }}
