--- a/server/ui/head.html
+++ b/server/ui/head.html
@@ -11,11 +11,12 @@
 
 </head>
 <body>
-<nav id="dp-navbar">
-  <div>
-  	<div id="dp-navbar-h">
-  		<a id="dp-logo" href="/">Dockpit</a>	
-  	</div>   
-    <h1>{{.DBPath}}</h1>
+
+<nav class="ui menu">
+  <div class="header item">
+    Dockpit
   </div>
+  <a class="item">
+    {{.DBPath}}
+  </a>  
 </nav>
