--- a/server/ui/head.html
+++ b/server/ui/head.html
@@ -7,14 +7,13 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=0.7, user-scalable=no">
-  <title>Dockpit</title>
-
+  <title>Dockpit {{.Version}}</title>
 </head>
 <body>
 
 <nav class="ui menu">
   <div class="header item">
-    Dockpit
+    Dockpit {{.Version}}
   </div>
   <a class="item">
     {{.DBPath}}
