added mode indicator

--- a/server/ui/editor.html
+++ b/server/ui/editor.html
@@ -3,4 +3,6 @@
 <div id="dp-editor-workspace"></div>
 
 <script src="/static/vendor/ace-1.1.8/src-noconflict/ace.js"></script>
+<script src="/static/vendor/ace-1.1.8/src-noconflict/ext-modelist.js"></script>
+
 {{ template "foot" }}
