--- a/server/ui/head.html
+++ b/server/ui/head.html
@@ -13,7 +13,7 @@
 
 <nav class="ui menu">
   <div class="header item">
-    Dockpit {{.Version}}
+    <a href="/">Dockpit {{.Version}}</a>
   </div>
   <a href="/" class="item">
     {{.DBPath}}
