added some minimal tracking and incremented version

--- a/server/ui/editor.html
+++ b/server/ui/editor.html
@@ -4,5 +4,8 @@
 
 <script src="/static/vendor/ace-1.1.8/src-min-noconflict/ace.js"></script>
 <script src="/static/vendor/ace-1.1.8/src-min-noconflict/ext-modelist.js"></script>
+<script>
+	analytics.track('Opened Editor');
+</script>
 
 {{ template "foot" }}
