exposed ports on test run is now displayed if any are exposed

--- a/server/ui/head.html
+++ b/server/ui/head.html
@@ -9,6 +9,8 @@
       
       analytics.load("8bvqeS1FiRo3sVVW9mZBoyzSrAmmCLXD");
       analytics.identify({{ DATABASE_ID }}, {});
+
+      window.DOCKER_HOST_IP = {{ .DockerHostIP}}
     }}();
   </script>
 
