--- a/server/ui/dashboard.html
+++ b/server/ui/dashboard.html
@@ -1,10 +1,8 @@
 {{ template "head" . }}
 
 <div class="ui padded grid">
-    <div class="two column row">
-      <div class="column" id="dp-dep-panel"></div>
-      <div class="column" id="dp-iso-panel"></div>
-    </div>
+  <div class="ten wide column" id="dp-dep-panel"></div>
+  <div class="six wide column" id="dp-iso-panel"></div>
 </div>
 
 <script type="text/javascript">
